--- a/HG/Base.lproj/Main.storyboard
+++ b/HG/Base.lproj/Main.storyboard
@@ -1664,6 +1664,9 @@
                                     <navigationItem title="Sleep Analysis" id="VO6-6c-aQ0">
                                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="dPb-Tw-wnd">
                                             <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <connections>
+                                                <action selector="cancel:" destination="xbM-nP-oK3" id="cUX-kO-PVq"/>
+                                            </connections>
                                         </barButtonItem>
                                     </navigationItem>
                                 </items>
